@fix:;locked files problem fixed
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@71 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/versioningPeas/multilang/versioning_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/versioningPeas/multilang/versioning_en.properties
@@ -61,3 +61,4 @@ versioning.SaveListWriters = Save the users list as template
 versioning.ListSaved = List template saved...
 versioning.warning.checkin.locked=The file is being edited online.<br/>Close it before releasing it.
 versioning.warning.checkin.locked.title=File locked
+versioning.warning.checkin.locked.force=Force release
