--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/versioningPeas/multilang/versioning_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/versioningPeas/multilang/versioning_fr.properties
@@ -61,3 +61,4 @@ versioning.SaveListWriters = Sauver la liste des utilisateurs comme modèle
 versioning.ListSaved = Modèle de liste sauvé... 
 versioning.warning.checkin.locked=Le fichier est encore ouvert en mode d'édition en ligne.<br/>Veuillez le fermer avant de pouvoir le libérer.
 versioning.warning.checkin.locked.title=Fichier verrouillé
+versioning.warning.checkin.locked.force=Forcer la libération
