@add:;Close JDBC connection and rollback
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@108 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/silvertrace/messages/utilMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/utilMessages_en.properties
@@ -25,6 +25,8 @@ util.EX_DELETE_FILE_ERROR  = Problem while deleting the file
 util.EX_WRONG_CHEMLIN_SPEC  =  The path specified to get the code page is not corresponding to a folder
 util.CAN_T_CLOSE_RESULTSET = Can't close JDBC Resultset
 util.CAN_T_CLOSE_STATEMENT = Can't close JDBC Statement
+util.CAN_T_CLOSE_CONNECTION = Can't close JDBC Connection
+util.CAN_T_ROLLBACK_CONNECTION = Can't rollback JDBC Transaction
 
 # FileRepositoryManager
 util.CANT_GET_FILESIZE = Error while getting the file size
