--- a/config-core/src/main/config/silvertrace/messages/utilMessages_fr.properties
+++ b/config-core/src/main/config/silvertrace/messages/utilMessages_fr.properties
@@ -24,6 +24,9 @@ util.EX_DELETE_FILE_ERROR  = Problème dans la destruction du fichier
 util.EX_WRONG_CHEMLIN_SPEC  =  Le chemin spécifié pour récupérer le code de la page n'est pas un répertoire
 util.CAN_T_CLOSE_RESULTSET = Impossible de fermer le ResultSet JDBC
 util.CAN_T_CLOSE_STATEMENT = Impossible de fermer le Statement JDBC
+util.CAN_T_CLOSE_CONNECTION = Impossible de fermer la Connexion JDBC
+util.CAN_T_ROLLBACK_CONNECTION = Impossible d'annuler la Transaction JDBC
+
 
 # FileRepositoryManager
 util.CANT_GET_FILESIZE = Impossible de récupérer la taille du fichier
