git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@119 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/PortletRegistry_en.properties
+++ b/config-core/src/main/config/properties/PortletRegistry_en.properties
@@ -28,6 +28,6 @@ errorGettingExtension=Error getting the Deployment Descriptor Extension: {0}
 errorGettingRoles=Error getting roles from web.xml: {0}
 errorReadingPortletDD=Cannot validate Portlet Deployment Descriptor: {0}
 errorRoleValidation=Error: Cannot Validate Roles, no Role matching {0} in web.xml
-errorReverseRoleMapping=could not lookup physical role name from portlet role name {0}
-errorStreamReadWhileUndeploy=Error reading  {0} file.Possible reason could be that {1} is not deployed currently.
+errorReverseRoleMapping=Could not look up physical role name from portlet role name {0}
+errorStreamReadWhileUndeploy=Error reading  {0} file.Possible reason could be that {1} is not currently deployed .
 errorSavingFile=Error saving portlet.xml file
