--- a/config-core/src/main/config/properties/WindowInvoker_en.properties
+++ b/config-core/src/main/config/properties/WindowInvoker_en.properties
@@ -1,6 +1,6 @@
 #
 #  CDDL HEADER START
-#  The contents of this file are subject to the terms
+#  The contents of this file is subject to the terms
 #  of the Common Development and Distribution License
 #  (the License). You may not use this file except in
 #  compliance with the License.
@@ -26,6 +26,6 @@ GENERIC_ERROR=ERROR: Content not available.
 CONTENT_EXCEPTION=ERROR: Content not available.
 INVALID_MODE_CHANGE_REQUEST=ERROR: Content not available. REASON: Invalid request for a change in portlet mode.
 INVALID_WINDOW_STATE_CHANGE_REQUEST=ERROR: Content not available. REASON: Invalid request for a change in window state.
-CONTAINER_EXCEPTION=Wait..portlet webapp is being deployed.
+CONTAINER_EXCEPTION=Please wait..portlet webapp is being deployed.
 # Do not localize PORTAL_INFO
 PORTAL_INFO=OpenPortal Portlet Container 2.0_01
