--- a/config-core/src/main/config/properties/com/silverpeas/communicationUser/multilang/communicationUserBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/communicationUser/multilang/communicationUserBundle_en.properties
@@ -4,7 +4,7 @@ seconds = seconds
 #CBO : REMOVE connectedUsers = Connected users
 #CBO : REMOVE authorMessage = Message
 user = User
-#CBO : REMOVE receiver = Recipient
+#CBO : REMOVE receiver = Receiver
 #CBO : REMOVE close = Close
 #CBO : REMOVE send = Send
 language = Language
@@ -15,7 +15,7 @@ save = Save the discussion
 logout = Quit
 exportDiscussion = Discussion of
 currentDiscussion = Discussion
-messageTooLong = The message must contain a text less than
+messageTooLong = The message must contain a text of less than
 nbMaxTextArea = 1240
 characters = characters
 #CBO : FIN ADD
