--- a/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle_en.properties
@@ -1,5 +1,5 @@
 //erreurs
-ContainsTooLargeText = does not have to exceed 
+ContainsTooLargeText = must not exceed 
 Characters = characters
 
 userPanel = Select a user
@@ -34,8 +34,8 @@ Other = Other
 Size = Size
 Color = Color
 WYSIWYG = Normal Mode 
-HTML = Mode HTML 
-RemoveHtmlTags = Please remove the following HTML tags from your text and resubmit : 
+HTML = HTML Mode  
+RemoveHtmlTags = Please remove the following HTML tags from your text and resubmit: 
 RememberHtml = Remember, when using HTML Mode you may need to escape
 Brackets = the brackets surrounding tags (< and >) with &lt; and &gt;
 Bold = Bold
@@ -51,8 +51,8 @@ Indent = Indent
 Hyperlink = Hyperlink
 LienURL = A link to a URL must be specified here 
 URL = URL 
-PageTropGrosse = Error, the field wysiwyg contains too many characters to be saved.
-ErreurScript = Error, your code HTML contains scripts.  Only the static pages (without script) are authorized.  
+PageTropGrosse = Error, the WYSIWYG field contains too many characters to be saved.
+ErreurScript = Error, your HTML code contains scripts.  Only static pages (without script) are authorized.  
 Script = does not have to contain scripts.
 Black = Black
 Brown = Brown
