--- a/config-core/src/main/config/properties/com/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle_en.properties
@@ -1,10 +1,10 @@
 JDP.class = Class Java used
 
-JDP.domainAdd = Add a LDAP domain
-JDP.domainSQLAdd = Add a SQL domain
+JDP.domainAdd = Add an LDAP domain
+JDP.domainSQLAdd = Add an SQL domain
 JDP.domainDel = Delete the LDAP domain
 JDP.domainSQLDel = Delete the SQL domain
-JDP.domainDelConfirm = Do you really want to delete this domain ?\\nThis will delete all the groups and all the users in this domain.
+JDP.domainDelConfirm = Do you really want to delete this domain?\\nThis will delete all the groups and all the users in this domain.
 JDP.domainMixt = Shared domain
 JDP.domainUpdate = Edit the LDAP domain
 JDP.domainSQLUpdate = Edit the SQL domain
@@ -12,7 +12,7 @@ JDP.domainSynchro = Synchronize the domain
 JDP.domainSynchroReport = Synchronisation report
 JDP.domains = Domains
 JDP.domaine = Domain
-JDP.silverpeasServerURL = URL of access to Silverpeas server
+JDP.silverpeasServerURL = URL to access Silverpeas server
 JDP.silverpeasServerURLEx = (ex : 'http://myextranet.mydomain.com')
 
 JDP.jobDomain = Register
@@ -51,46 +51,46 @@ JDP.userAdd = Add a user
 JDP.userCreate = Create a user
 JDP.csvImport = Import (CSV file)
 JDP.csvFile = CSV file
-JDP.errorCsvFile = Error, only .csv file can be uploaded
+JDP.errorCsvFile = Error, only .csv files can be uploaded
 JDP.ligne = - Line
 JDP.colonne = Column
 JDP.valeur = Value
-JDP.obligatoire = This field is mandatory
+JDP.obligatoire = This is a required field  
 JDP.nbCarMax = The value must not exceed
 JDP.nbCarMin = The value must contain at least
 JDP.caracteres = characters
 JDP.espaces = The value must not contain any space
 JDP.existingLogin = This login is already used
-JDP.valeursPossibles = The possible value are : 'Admin', 'AdminPdc', 'AdminDomain', 'User' or 'Guest'
+JDP.valeursPossibles = The possible values are : 'Admin', 'AdminPdc', 'AdminDomain', 'User' or 'Guest'
 JDP.userDel = Delete a user
-JDP.userDelConfirm = Do you really want to delete this user ?
+JDP.userDelConfirm = Do you really want to delete this user?
 JDP.userImport = Import a user
 JDP.userManage = Modify the user list
-JDP.userPanelAccess = Look for a user or a group
+JDP.userPanelAccess = Look for a user or group
 JDP.userRemove = Remove a user
 JDP.userRights = Rights
 JDP.userSynchro = Synchronize a user
 JDP.userUnsynchro = Delete the user synchronization
 JDP.userUpdate = Edit the user data
 
-JDP.welcome =  Welcome to the module Register
+JDP.welcome =  Welcome to the Register module 
 
 JDP.traceLevel = Trace level
 
-JDP.conseilTXT = To save your file on text format, use the Save As function of the File menu.
+JDP.conseilTXT = To save your file in text format, use the 'Save As' function from the File menu.
 
-JDP.userCryptPasswords = Encrypt user's passwords
-JDP.LaunchEncrypt = Start the password's encryption
+JDP.userCryptPasswords = Encrypt user's password
+JDP.LaunchEncrypt = Start the password encryption
 
 JDP.getX509 = Create a X509 certificate
 
 JDP.roleManager = Managers
-JDP.GroupManagersUpdate = Update managers of group
-JDP.GroupManagersDelete = Remove all managers of group
-JDP.GroupManagersDeleteConfirmation = Are you sure to want to remove all managers of group ?
+JDP.GroupManagersUpdate = Update managers of the group
+JDP.GroupManagersDelete = Remove all managers of the group
+JDP.GroupManagersDeleteConfirmation = Are you sure you want to remove all managers of the group?
 
 JDP.usersFound = user(s) found
-JDP.inProgress = Search in progress !<BR/>Please wait...
+JDP.inProgress = Search in progress!<BR/>Please wait...
 JDP.LDAPField = LDAP field
 JDP.searchSyntax = Help
 JDP.fieldSyntax = Search syntax
