--- a/config-core/src/main/config/properties/com/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle_en.properties
@@ -36,7 +36,7 @@ JWD = Workflows
 JRIFBP = FileBox+ Directory Import
 
 JMAP = Maintenance
-JMAP.header1 = Management of the Maintenance mode
+JMAP.header1 =  Maintenance Mode Management
 JMAP.maintenanceOnAir = The site is currently in maintenance mode...
 JMAP.active = Enable
 JMAP.desactive = Disable
