--- a/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_en.properties
@@ -21,14 +21,14 @@ JSPP.UPSpaceTemplateProfile = Select groups/users for the profile
 
 JSPP.welcome =  Welcome to the Manage Workspace module 
 
-JSPP.maintenanceTout = All Silverpeas is in Maintenance mode !
-JSPP.maintenance = Maintenance mode :
+JSPP.maintenanceTout = All Silverpeas is in Maintenance mode!
+JSPP.maintenance = Maintenance mode:
 JSPP.maintenanceStatus = This space is actually
-JSPP.maintenanceTxtModeOn = in maintenance mode...
+JSPP.maintenanceTxtModeOn = in Maintenance mode...
 JSPP.maintenanceModeOn = Activated
 JSPP.maintenanceModeOff = Deactivated
-JSPP.maintenanceModeToOn = Activate the maintenance mode
-JSPP.maintenanceModeToOff = Deactivate the maintenance mode
+JSPP.maintenanceModeToOn = Activate Maintenance mode
+JSPP.maintenanceModeToOff = Deactivate Maintenance mode
 
 JSPP.ProfilePanelCreateTitle = Add a role
 JSPP.ProfilePanelModifyTitle = Modify a role
