--- a/config-core/src/main/config/properties/com/silverpeas/portlets/multilang/portletsBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/portlets/multilang/portletsBundle_en.properties
@@ -18,7 +18,7 @@ portlets.portlet.myCheckOutFiles.help = This portlet displays all the files of t
 portlets.portlet.myTodos.help = This portlet displays all the tasks yet to be completed by you.
 portlets.portlet.quickInfos.help = This portlet displays all the current news on the portal.
 
-portlets.portlet.componentInstance.help = This portlet displays a portal component. If you do not possess sufficent access rights, an error message will be displayed to warn you.
+portlets.portlet.componentInstance.help = This portlet displays a portal component. If you do not possess sufficent access rights, an error message will be displayed.
 portlets.portlet.componentInstance.error.accessForbidden = Non-authorized access!
 portlets.portlet.componentInstance.pref.instanceId = Component id
 
