--- a/config-core/src/main/config/properties/com/silverpeas/statistic/multilang/statistic_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/statistic/multilang/statistic_en.properties
@@ -1,3 +1,3 @@
 statistic.lastAccess = Last access
-statistic.nbAccess = Number of access
-statistic.detail = Historical of access
+statistic.nbAccess = Number of accesses
+statistic.detail = Access history
