--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
@@ -12,14 +12,14 @@ templateDesigner.file = File
 templateDesigner.fields = Form fields
 templateDesigner.field = Form field
 
-templateDesigner.size = Size of the field
-templateDesigner.maxLength = Maximum size of the field
+templateDesigner.size = Size of field
+templateDesigner.maxLength = Maximum size of field
 templateDesigner.rows = Number of lines
 templateDesigner.cols = Number of columns
 templateDesigner.default = Default value
 templateDesigner.host = Name of the LDAP host server
 templateDesigner.port = Port number
-templateDesigner.version = Version number of the LDAP protocol
+templateDesigner.version = Version number of LDAP protocol
 templateDesigner.baseDN = LDAP connection string
 templateDesigner.password = LDAP authentication password
 templateDesigner.searchBase = LDAP search request
