--- a/config-core/src/main/config/properties/com/silverpeas/interestCenterPeas/multilang/interestCenterBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/interestCenterPeas/multilang/interestCenterBundle_en.properties
@@ -1,7 +1,7 @@
 ICName = Name
 RequestName = Request name
-EmtyICName = Please fill the request name
-NameExists = This name is already used. Do you want to overwrite the request ?
+EmtyICName = Please enter a request name
+NameExists = This name is already used. Do you want to overwrite the request?
 AddICenter = New request
 EditICenter = Edit
 DeleteICenter = Delete
