--- a/config-core/src/main/config/properties/com/silverpeas/portlets/multilang/PortletRegistry_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/portlets/multilang/PortletRegistry_en.properties
@@ -1,11 +1,11 @@
 #
 #  CDDL HEADER START
-#  The contents of this file are subject to the terms
+#  The contents of this file is subject to the terms
 #  of the Common Development and Distribution License
 #  (the License). You may not use this file except in
 #  compliance with the License.
 #
-#  You can obtain a copy of the License at
+#  You can obtain a copy of the License at:
 #  http://www.sun.com/cddl/cddl.html and legal/CDDLv1.0.txt
 #  See the License for the specific language governing
 #  permission and limitations under the License.
@@ -27,7 +27,7 @@ invalidWar=Invalid Portlet war file. Possible reason can be error reading {0} fr
 errorGettingExtension=Error getting the Deployment Descriptor Extension: {0}
 errorGettingRoles=Error getting roles from web.xml: {0}
 errorReadingPortletDD=Cannot validate Portlet Deployment Descriptor: {0}
-errorRoleValidation=Error: Cannot Validate Roles, no Role matching {0} in web.xml
-errorReverseRoleMapping=could not lookup physical role name from portlet role name {0}
+errorRoleValidation=Error: Cannot Validate Roles, no matching Role {0} in web.xml
+errorReverseRoleMapping=could not look up physical role name from portlet role name {0}
 errorStreamReadWhileUndeploy=Error reading  {0} file.Possible reason could be that {1} is not deployed currently.
 errorSavingFile=Error saving portlet.xml file
