--- a/config-core/src/main/config/properties/com/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle_en.properties
@@ -22,7 +22,7 @@ JDP.userPanelGroup = Group management
 
 JDP.groupAdd = Create a group
 JDP.groupDel = Delete a group
-JDP.groupDelConfirm = Do you really want to delete this group ?
+JDP.groupDelConfirm = Do you really want to delete this group?
 JDP.groupImport = Import a group
 JDP.groups = Groups
 JDP.groupSynchro = Synchronize a group
@@ -90,7 +90,7 @@ JDP.GroupManagersDelete = Remove all managers of the group
 JDP.GroupManagersDeleteConfirmation = Are you sure you want to remove all managers of the group?
 
 JDP.usersFound = user(s) found
-JDP.inProgress = Search in progress!<BR/>Please wait...
+JDP.inProgress = Search in progress! Please wait...
 JDP.LDAPField = LDAP field
 JDP.searchSyntax = Help
 JDP.fieldSyntax = Search syntax
