--- a/config-core/src/main/config/properties/com/stratelia/webactiv/agenda/multilang/agenda_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/agenda/multilang/agenda_en.properties
@@ -15,11 +15,11 @@ listeDiffusion = Collaborators
 listeDiffusionVide = Nobody
 editionListeDiffusion = Select collaborators
 listeUtilisateurs = User list
-tentative = Not replied
+tentative = No reply
 accepted = Accepted
 declined = Refused
 participations = Invitations
-participationstentative = Not responded
+participationstentative = No reply
 participationsaccepted = Accepted
 participationsdeclined = Refused
 accepterInvitation = Accept
