--- a/config-core/src/main/config/properties/com/stratelia/webactiv/homePage/multilang/homePageBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/homePage/multilang/homePageBundle_en.properties
@@ -1,8 +1,8 @@
 adminConsol = Administration
 MyPDCSubscriptions = My favorite requests
-NoPDCSubscriptions = No favorite request !
+NoPDCSubscriptions = No favorite request!
 Administration = Administration
-AdministrationPortlet = Portlet's administration
+AdministrationPortlet = Portlet administration
 AdministrationPdc = Filing system
 AdministrationStat = Statistics
 
@@ -25,7 +25,7 @@ NotifyUser = Send a notification
 NotificationBox = Read my notifications
 MyInterestCenters = My subscriptions
 LatestPublications = The * latest publications
-QuickInfos = Quick infos
+QuickInfos = Quick info
 
 HelpLaunchIE = Help on tools implementation
 HelpLaunchIEPage = HelpLaunchIE.jsp
@@ -49,13 +49,13 @@ Clipboard = Clipboard
 
 NewMessages = new messages
 NewMessage = new message
-NoNewMessage = No new messages !
+NoNewMessage = No new messages!
 Today = Today
-NoEvents = No events programmed !
+NoEvents = No events programmed!
 ThinkTo = Remember to
-NoTodos = No tasks programmed !
+NoTodos = No tasks programmed!
 MyFavorites = My Favorites
-NoFavorites = No favorite defined !
+NoFavorites = No favorite defined!
 MyNextEvent = My next appointment
 today = Today
 tomorrow = Tomorrow
@@ -99,7 +99,7 @@ notification.subject = Subject
 BackToPersonalMainPage = Home of personal workspace
 
 # Login Page
-storePassword = Store the password ?
+storePassword = Store the password?
 
 # Connected Users
 connectedUser = user connected
@@ -108,5 +108,5 @@ connectedUsers = users connected
 # traitement des erreurs de login
 1 = Invalid login or password
 2 = Technical problem 
-3 = Your session have expired
+3 = Your session has expired
 4 = User disconnection
