--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
@@ -126,8 +126,8 @@ GML.status						= Status
 GML.subscription                                        = Subscription
 GML.shrink						= Minimize
 GML.surname						= First name
-GML.selection					= Selection
-GML.select						= Select...
+GML.selection						= Selection
+GML.select						= Select
 
 GML.toSelect						= Select
 GML.theField						= the field
@@ -151,12 +151,12 @@ GML.yes							= Yes
 // window title
 GML.popupTitle						= ___/ Silverpeas&#153; - Collaborative Portal Organizer \_________________________________________
 
-GML.trademark						= &copy; 2001-2008 Silverpeas - All Rights Reserved
+GML.trademark						= &copy; 2001-2009 Silverpeas - All Rights Reserved
 
 // Formulaire
 GML.thefield						= The field
-GML.isRequired						= is mandatory.
-GML.requiredField					= Mandatory
+GML.isRequired						= is required.
+GML.requiredField					= Required
 GML.by							= by
 
 // format
@@ -198,25 +198,25 @@ GML.mois11 = December
 //Contrôle JavaScript
 GML.ThisFormContains = This forms contains 
 GML.MustBeFilled = must be filled
-GML.MustContainsNumber = must contains a number
-GML.MustContainsFloat = must contains a float
-GML.MustContainsCorrectDate = must contains a date
-GML.MustContainsPostDateTo = must contains a post date to
-GML.MustContainsPostOrEqualDateTo = must contains a post or equal date to
-GML.MustContainsPostDate = must contains a post date
-GML.MustContainsDateBetween1 = must contains a between
+GML.MustContainsNumber = must contain a number
+GML.MustContainsFloat = must contain a float
+GML.MustContainsCorrectDate = must contain a date
+GML.MustContainsPostDateTo = must contain a post date to
+GML.MustContainsPostOrEqualDateTo = must contain a post or equal date to
+GML.MustContainsPostDate = must contain a post date
+GML.MustContainsDateBetween1 = must contain a between
 GML.MustContainsDateBetween2 = and
-GML.MustContainsCorrectHour = must contains a correct hour
+GML.MustContainsCorrectHour = must contain a correct hour
 
 //Plan de classement
 GML.PDC = Categorization
-GML.PDCParam = Set up the categorization scheme use
+GML.PDCParam = Set up the categorization scheme
 GML.PDCNewPosition = Create a new position
 GML.PDCDeletePosition = Delete selected position(s)
 
 //Contrôles d'accès
-GML.ForbiddenAccessContent = You are not allowed to access to this information !
-GML.DocumentNotFound = You try to reach a deleted information !
+GML.ForbiddenAccessContent = You are not allowed to access this information!
+GML.DocumentNotFound = The information you are trying to reach has been deleted!
 
 GML.creationDate = Created on
 GML.updateDate = Updated on
@@ -229,13 +229,13 @@ GML.csvFile = CSV file
 GML.ligne = - Line
 GML.colonne = Column
 GML.valeur = Value
-GML.obligatoire = This field is mandatory
+GML.obligatoire = This field is required
 GML.nbCarMax = The value cannot exceed
 GML.nbCarMin = The value must have at least
 GML.caracteres = characters
-GML.errorCsvFile = Error, .csv file only are allowed
+GML.errorCsvFile = Error! Only .csv files are allowed
 //Export CSV
-GML.ExportSucceeded = Export done.
+GML.ExportSucceeded = Export has finished.
 GML.ExportFailed = Export has failed.
 GML.ExportInProgress = Export in progress...
 
