--- a/config-core/src/main/config/properties/com/stratelia/webactiv/todo/multilang/todo_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/todo/multilang/todo_en.properties
@@ -23,7 +23,7 @@ percentCompletedToDo = Progress
 percentUndefined = Not started
 listeDiffusion = Executors
 listeDiffusionCourt = Owners
-listeDiffusionVide = Nobody's assigned
+listeDiffusionVide = Nobody has been assigned
 organisateurToDo = Organizer
 descriptionToDo = Description
 dateDebutToDo = Beginning
@@ -47,15 +47,15 @@ retour = Go back
 
 // erreur
 utilisateurInconnu = Unknown user
-saisieErreur = Error : 
+saisieErreur = Error: 
 dateDebutErreur = Would you please enter a valid start date (ex : 12/25/2000)
-dateFinIncorrecte = Would you please enter a valid start end (ex : 12/25/2000)
-nameErreur = Name attribute is mandatory
+dateFinIncorrecte = Would you please enter a valid end date (ex : 12/25/2000)
+nameErreur = Name attribute is required
 pourcentErreur = Invalid percent
 MustContainsText = must contain text 
 MustContainsCorrectDate = must contain a correct date 
 MustContainsPostDateToBeginDate = must contain a date later than the start date
-ThisFormContains = Careful, this form contains 
+ThisFormContains = Warning! this form contains 
 Error = error 
 Errors = errors 
 ContainsTooLargeText = must contain a text smaller than 
@@ -68,13 +68,13 @@ ajouter = Ok
 mettreAJour = Update
 supprimerTodo = Delete
 modifierTodo = Appoint executors
-listeDiffusionVide = Vide 
+listeDiffusionVide = Distribution list empty
 descriptionToDo = Description 
 nomToDo = Name
-mandatoryFields = Mandatory
+mandatoryFields = Required
 public = Public
 private = Private
 priorite = Priority
 
-cadenas_clos = Shut down
+cadenas_clos = Locked
 cadenas_ouvert = Task in progress
