--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/comment/multilang/comment_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/comment/multilang/comment_en.properties
@@ -31,14 +31,14 @@
   archive = Archive
   required = required
   document = Document
-  nomVide = You have to fill all required fields.
-  pleaseFill = Please fill in mandatory fields.
-  pleaseFill_single = Please fill in mandatory field.
+  nomVide = Please complete all required fields.
+  pleaseFill = Please complete all required fields.
+  pleaseFill_single = Please complete required field.
 Comments = Comments
 
 // erreurs
   erreur = Error
-  champsTropLong = Comment does not have to exceed 2000 characters
+  champsTropLong = Comment must not exceed 2000 characters
 
 
   comment.DAO_NoClosedStatment = Impossible to close the " Statement "
@@ -54,6 +54,6 @@ Comments = Comments
   comment.AC_NoDeletecommentDetail = Impossible to delete the comment
   comment.AC_NoCreatePath = Impossible to create a context
   comment.AC_NoDeletePath = Impossible to delete a context
-  comment.AC_NoDeleteOnServer = the files will not be to remove server
+  comment.AC_NoDeleteOnServer = the files will not be  removed from the server
   comment.AC_NoCreateIndex = the file will not be indexed by the search engine
-  comment.AC_NoDeleteIndex = the file will be always indexed by the search engine
+  comment.AC_NoDeleteIndex = the file will still be indexed by the search engine
