--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/formPane/formPaneBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/formPane/formPaneBundle_en.properties
@@ -2,11 +2,11 @@ Form = Form
 Name = Name
 Description = Description
 AskReply = Request + response
-EditorMode = Editor gestion module
+EditorMode = Editor management module
 RequestsStorage = Store requests
 ResponsesStorage = Store responses
 RequestsSending = Send requests
-UserMode = User gestion module
+UserMode = User management module
 Non = No
 Oui = Yes
 Supprimer = Delete
