--- a/config-core/src/main/config/properties/com/silverpeas/pdcSubscription/multilang/pdcsubscription_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/pdcSubscription/multilang/pdcsubscription_en.properties
@@ -1,15 +1,15 @@
 notification.title = New publication classified
-standartMessage = New publication classified in one of your interest centers
-Space    = Workspace : 
-Subscription = Interest center : 
-Service  = KM Service : 
-Date     = Date : 
-URL      = Link : 
-Axis     = Axis : 
-notification.delete.title = Your interest center removed
-deleteOnAxisMessage = One axis of your interest centers has been removed. Interest centers has been removed too.
-deleteOnValueMessage = One value of your interest centers has been removed. Interest centers has been removed too.
-DocumentName = Document : 
-Path = Path : 
-pdcClassification = My interest centers
+standartMessage = New publication classified in one of your Centers of Interest.
+Space    = Workspace: 
+Subscription = Centers of Interest: 
+Service  = KM Service: 
+Date     = Date: 
+URL      = Link: 
+Axis     = Axis: 
+notification.delete.title = Your center of interest has been removed
+deleteOnAxisMessage = An axis of your centers of interest has been removed. Centers of Interest have been removed too.
+deleteOnValueMessage = A value of your centers of interest has been removed. Centers of Interest have been removed too.
+DocumentName = Document: 
+Path = Path: 
+pdcClassification = My Centers of Interest.
 
