--- a/config-core/src/main/config/properties/com/silverpeas/thesaurusPeas/multilang/thesaurusPeasBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/thesaurusPeas/multilang/thesaurusPeasBundle_en.properties
@@ -38,10 +38,10 @@ thesaurus.IPGroup = Group
 thesaurus.IPUser = User
 
 thesaurus.vocAffecte = Assigned vocabulary
-thesaurus.dejaAffecte = A vocabulary is already assigned with certain users
-thesaurus.dejaAffecteUtilisateur = A vocabulary is already assigned with the one of the users
-thesaurus.onlyssAffcet_toAffect = Assign only with the users without vocabulary
-thesaurus.tousAffecte = Assign with all
+thesaurus.dejaAffecte = A vocabulary is already assigned to certain users
+thesaurus.dejaAffecteUtilisateur = A vocabulary is already assigned to one of the users
+thesaurus.onlyssAffcet_toAffect = Assign only to users without vocabulary
+thesaurus.tousAffecte = Assign to all
 thesaurus.errorCreateVoc = This name already exists
 thesaurus.oneuser_dejaAffecte = A vocabulary is already assigned
 thesaurus.oneuser_onlyssAffcet_toAffect = Cancel
@@ -52,18 +52,18 @@ thesaurus.none = none
 
 
 //erreurs
-thesaurus.mustContainsText = must be filled 
+thesaurus.mustContainsText = must be filled in
 thesaurus.thisFormContains = Warning, this form contains
-thesaurus.containsTooLargeText = does not have to exceed 
+thesaurus.containsTooLargeText = smust not exceed 
 thesaurus.nbMaxTextArea = 2000 
 thesaurus.characters = characters
 thesaurus.show = Show
 
 //messages d'avertissement
-thesaurus.MessageSuppressionSelectedVoca = Do you really want to delete the selected vocabulary ?
-thesaurus.MessageSuppressionVoca = Do you really want to delete this vocabulary ?
-thesaurus.MessageSuppressionsSyno = Do you really want to delete the selected synonyms ?
+thesaurus.MessageSuppressionSelectedVoca = Do you really want to delete the selected vocabulary?
+thesaurus.MessageSuppressionVoca = Do you really want to delete this vocabulary?
+thesaurus.MessageSuppressionsSyno = Do you really want to delete the selected synonyms?
 thesaurus.MessageSelectVoca = Please select a vocabulary
 thesaurus.MessageSelectTerm = Please select a term
 thesaurus.MessageSelectVocaTerm = Please select a vocabulary and a term
-thesaurus.MessageSelectAxis = Please, select axis first
+thesaurus.MessageSelectAxis = Please select axis first
