--- a/config-core/src/main/config/properties/com/stratelia/webactiv/clipboard/multilang/clipboard_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/clipboard/multilang/clipboard_en.properties
@@ -8,7 +8,7 @@ clipboard = Clipboard
   information = Information
   dateDebut = Start Date
   dateFin = End Date
-  obligatoire = Mandatory
+  obligatoire = Required
 // Presse-papier
   copier = Copy
   couper = Cut
@@ -26,8 +26,8 @@ clipboard = Clipboard
 // confirmation
   supprimerQIConfirmation = Do you really want to remove the Quickinfo ?
 // erreurs
-  titreObligatoire = Impossible to create quickinfo : Name is mandatory
-  dateDebutAvantDateFin = Impossible to create quickinfo : end date (if precised) have to be after begin date
+  titreObligatoire = Impossible to create Quickinfo : Name is required
+  dateDebutAvantDateFin = Impossible to create quickinfo: end date (if pspecified) has to be after begin date
   pasteError = Paste error
   copyError = Copy error
 vide =
