--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/attachment/multilang/attachment_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/attachment/multilang/attachment_en.properties
@@ -1,8 +1,8 @@
   type = Type
   fichierJoint = File to attach
   liaisonTerminée = linked successfully
-  nomVide = The filename must not be empty !
- fichierInexistant = This file does not exist !
+  nomVide = The filename must not be empty!
+ fichierInexistant = This file does not exist!
  liaisonInaccessible = The file cannot be found
  zip = Zip
  uploadDate = Upload date
@@ -14,7 +14,7 @@ readOnly = Locked by
 at = at
 until = until
 
-confirm.checkin.message=Save your changes ?
+confirm.checkin.message=Save your changes?
 
 Title = Title
 
@@ -24,17 +24,17 @@ downloadInProgress = Upload in progress...
 
 CopyLink = To copy the link to this file : Right click then 'Copy shortcut'
 
-attachment.SameFileNameAlreadyCheckout = You already have checked out a file with the same name !<br>To avoid overwriting modifications, you can not check out simultaneously two files with the same name.
+attachment.SameFileNameAlreadyCheckout = You  have already checked out a file with the same name !<br>To avoid overwriting modifications, you can not check out simultaneously two files with the same name.
 
-attachment.notifSubjectLib = Reserved file : was unlock
-attachment.notifSubjectExpiry = Reserved file : expire of reservation tomorrow
-attachment.notifSubjectAlert = Reserved file : soon expire of reservation
+attachment.notifSubjectLib = Reserved file : was unlocked
+attachment.notifSubjectExpiry = Reserved file : reservation expires tomorrow
+attachment.notifSubjectAlert = Reserved file : reservation will soon expire
 attachment.notifName = Reserved file
-attachment.notifUserExpiry = expire of reservation tomorrow
-attachment.notifUserAlert = soon expire of reservation 
-attachment.notifUserLib = has expiry and was unlock
+attachment.notifUserExpiry = reservation expires tomorrow
+attachment.notifUserAlert = reservation will soon expire
+attachment.notifUserLib = has expired and was unlocked
 
-attachment.suppressionWhichTranslations = The file "*" you want to remove have several translations.<br/>Which translations do you want to remove ?
+attachment.suppressionWhichTranslations = The file "*" you want to remove has several translations.<br/>Which translation do you want to remove?
 attachment.suppressionConfirmation = Are you sure to want to remove the file "*" ?
 attachment.allTranslations = All translations
 
