--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/indexEngine/SpecialChars_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/indexEngine/SpecialChars_en.properties
@@ -1,5 +1,5 @@
 # the special chars with their replacement chars.
 #
-# A line like :
+# A line such as:
 #  éèê = e
-# means that each 'é' or 'è' or 'ê' character will be replaced by a 'e'.
+# means that each 'é' or 'è' or 'ê' character will be replaced by an 'e'.
